--- a/src/Auth/Login/index.css
+++ b/src/Auth/Login/index.css
@@ -2,12 +2,24 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+}
+
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-image: url('../images/backgrnd.jpeg');
     /* image source: https://wallpapers.com/tv-shows-background */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    opacity: 0.3; /* Adjust the opacity here */
+    z-index: -1; /* Ensure the pseudo-element is behind other content */
 }
+
 
 .container {
     position: absolute;
@@ -15,7 +27,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 255, 255);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -36,7 +48,7 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"], input[type="email"], input[type="number"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
