--- a/src/Auth/Login/index.css
+++ b/src/Auth/Login/index.css
@@ -34,6 +34,32 @@ body::before {
     width: 50%!important;
 }
 
+.containerForLogin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background: rgba(255, 255, 255);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 50%!important;
+}
+
+.containerForRegister {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background: rgba(255, 255, 255);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 50%!important;
+}
+
 h1 {
     color: #333;
 }
