--- a/src/Details/index.css
+++ b/src/Details/index.css
@@ -31,3 +31,9 @@ body {
   font-family: Arial, sans-serif; /* Set the font family */
   color: #666; /* Set the color of the subtitle */
 }
+
+.review-card {
+  border-style: solid;
+  border-color: gray;
+  border-radius: 10px;
+}
