--- a/src/Profile/index.css
+++ b/src/Profile/index.css
@@ -2,6 +2,11 @@
     background: #f7f7ff;
     margin-top: 20px;
 } */
+
+.card:hover {
+    transform: scale(1) !important;
+}
+
 .timeline {
     list-style-type: none;
     margin: 0;
@@ -232,7 +237,24 @@
 
 .container {
     width: 80% !important;
+    /* position: inherit ! important;
+    /* top: 50%;*/
+    /* left: 50%;
+    text-align: center;  */
 }
+
+/* .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background: rgba(255, 255, 255);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 50% !important;
+} */
 
 /* 
 .card {
