--- a/src/Profile/index.css
+++ b/src/Profile/index.css
@@ -3,6 +3,34 @@
     margin-top: 20px;
 } */
 
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgb(131, 127, 127);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    opacity: 0.7;
+}
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+    background-color: rgb(158, 151, 151, 0.5);
+}
+
+.carousel-control-prev:hover .carousel-control-prev-icon,
+.carousel-control-next:hover .carousel-control-next-icon {
+    background-color: #666;
+}
+
+.card-img-top {
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
 .card:hover {
     transform: scale(1) !important;
 }
