--- a/src/Home/index.css
+++ b/src/Home/index.css
@@ -27,6 +27,13 @@ body {
   color: #666; /* Set the color of the subtitle */
 }
 
+.wishlist-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 
 
 .navbar-login-btn {
