--- a/src/Auth/Login/index.css
+++ b/src/Auth/Login/index.css
@@ -46,12 +46,12 @@ body::before {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    width: 50%!important;
+    width: 50% !important;
 }
 
 .containerForRegister {
     position: absolute;
-    top: 50%;
+    top: 550px;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -59,7 +59,7 @@ body::before {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    width: 50%!important;
+    width: 50% !important;
 }
 
 h1 {
